# playwright-automation

./: .gitignore  DINGTALK_DEBUG_README.md  README.md  conftest.py  doubao_ai_image_generator.py  find_downloads_directory.py  playwright_record_existing_chrome_fixed.py  pyproject.toml  simple_word_counter.py  test_dingtalk_editor_debug.py  test_dingtalk_iframe_analysis.py  test_dingtalk_simple_focus.py  test_doubao_ai_generate_images.py  test_doubao_ai_simple.py  test_doubao_ai_summary.py  test_gemini_image_generation_upload_fixed.py  test_social_media_automatic_publish.py  wechat_mp_sdk.py
dingtalk_sdk/: README.md  __init__.py  dingtalk_sdk.py  example_usage.py  pyproject.toml  requirements.txt
markdown_cleaner_sdk/: README.md  __init__.py  config.py  example.py  keywords.txt  markdown_cleaner.py
markdown_files/: craXcel，一个可以移除Excel密码的开源工具.md
wechat_mp_sdk/: README.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt  wechat_mp_sdk.py
word_counter_sdk/: README.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt
